test/error/E5.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {}
}

